// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section component renders correctly with no resource 1`] = `
<section
  className={false}
  id={null}
>
  <h2
    className="ds-h2"
  />
  <span
    className="ds-text--lead"
  />
  test child
</section>
`;

exports[`Section component renders correctly with resource containing title, subheader, and helptext 1`] = `
<section
  className={false}
  id={null}
>
  <h2
    className="ds-h2"
  >
    Performance Goals and Benchmarks
  </h2>
  <span
    className="ds-text--lead"
  />
  test child
</section>
`;

exports[`SectionDesc component renders correctly 1`] = `
<p
  className="mb4 text-l"
>
  test child
</p>
`;

exports[`SectionTitle component renders correctly 1`] = `
<h2>
  <div
    className="test child"
  />
</h2>
`;

exports[`Subsection component renders correctly 1`] = `
<Collapsible
  bgColor="white"
  btnBgColor="white"
  btnColor="blue"
  id={null}
  nested={false}
  onChange={null}
  open={false}
  sticky={true}
  title="Performance Goals and Benchmarks"
>
  <Instruction
    args={null}
    reverse={false}
    source="activities.goals.instruction"
  />
  test child
</Collapsible>
`;
